# snowflake-dbt-tests

./: .gitignore  README.md  dbt_project.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: ci.yml  pages.yml
docs/: index.html  playground.html
docs/assets/: index-B3Y2Nryg.js  index-B5BE5XPJ.js  index-Dx7xZ53l.css  index-gmpBXo6z.css
models/: model.sql  schema.yml
models/marts/: daily_sales.sql
models/staging/: stg_transactions.sql
playground/src/: App.jsx  styles.css
scripts/: calculate_daily_sales.py
seeds/: sample_transactions.csv
src/snowflake_dbt_tests/: __init__.py  sales.py
tests/: daily_sales_non_negative.sql  test_calculate_daily_sales.py  test_model.sql  test_sales.py
tests/data/: sample_sales.csv
